# FinSight-Real-Time-Fraud-Detection-Platform

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: ci-cd.yml
api/: dependencies.py  main.py  metrics.py
api/middleware/: middleware.py
api/routers/: scoring.py  system.py
api/schemas/: scoring.py
api/services/: alert_service.py  decision_engine.py  rule_engine.py  scoring_service.py
configs/: rules.yaml  settings.py
consumer/: consumer.py
database/: init.sql  models.py  repositories.py  session.py
deployment/nginx/: nginx.conf
deployment/scripts/: deploy.sh
docker/: Dockerfile.api  Dockerfile.consumer  Dockerfile.ml  Dockerfile.mlflow  Dockerfile.producer
docs/: api_examples.md  deployment_guide.md
migrations/: env.py
migrations/versions/: 20240101_0001_initial_schema.py
ml/: evaluation.py  explainability.py  feature_engineering.py  model_loader.py  pipeline.py  training.py
monitoring/prometheus/: prometheus.yml
notebooks/: 01_eda.ipynb  02_model_training.ipynb  03_shap_explainability.ipynb
producer/: kafka_producer.py  main.py  synthetic_generator.py
scripts/: init_kafka.py  migrate.py  replay_dataset.py  seed_model.py  setup.sh
tests/: conftest.py
tests/api/: test_scoring_api.py
tests/integration/: test_repositories.py  test_scoring_service.py
tests/kafka/: test_kafka_producer.py
tests/load/: locustfile.py
tests/model/: test_training.py
tests/unit/: test_decision_engine.py  (+4 more)
(+4 files in other folders)
